# Ruzip

./: .gitignore  LICENSE  README.md  geçici.txt  index.html  package-lock.json  package.json
.github/workflows/: release.yml
docs/screenshots/: README.md
installer/: ruzip_setup.iss
scripts/: build-release.ps1
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/commands/: archive_edit.rs  archive_read.rs  archive_write.rs  mod.rs  types.rs  utils.rs
src/components/: AboutModal.tsx  Dialog.tsx  FileList.tsx  StatusBar.tsx  Toolbar.tsx
src/styles/: global.css
