[package]
name = "ruzip"
version = "0.1.2"
description = "RuZip - Modern ZIP Archiver"
authors = ["RuZip"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ruzip_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = { version = "2", features = ["deflate", "aes-crypto"] }
walkdir = "2"
chrono = "0.4"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

